# aoc2020

./: .gitpod.yml  Cargo.toml  README.md  pattern.py
.theia/: launch.json
benches/: aoc_benchmarks.rs
inputs/: 01.yaml  02.yaml  03.yaml
src/: lib.rs  main.rs
