[package]
name = "aoc"
version = "0.1.0"
authors = ["Jakub Klapacz <jakub@k5z.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
nom = "6.0.1"
log = "0.4.11"
env_logger = "0.8.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "aoc_benchmarks"
harness = false
